--- a/week2/guedong.html
+++ b/week2/guedong.html
@@ -34,7 +34,7 @@
             } else if (newD.reduce((a, c) => a + c) > budget){
                 for (let i in newD){
                     budget = budget - newD[i]; //8,6,3,-1,-6
-                    if(budget < 0){ // 최소값 순으로 빼면서 마이너스 나오면 스탑
+                    if(budget < 0){ // 최소값 순으로 빼면서 음수 나오면 스탑
                         result = i; // result로 정의하면 i 갯수 (0 제외) 나온다.
                         break;
                     }
@@ -47,14 +47,23 @@
 <hr>
 3. 크레인 인형뽑기 게임<br>
 <script>
-    const solution3 = () => {
-        const arr = [1,2,3,4];
-        for(let i in arr){
-            result = i;
+    const solution3 = (board, moves) => {
+        let result = [];
+        for(let j in moves){
+            for(let i in board){
+                if(board[i][moves[j] - 1] > 0){
+                    result.push(i);
+                }
+            }
         }
-        return result;
+        return [...new Set(result)].length;
     }
-    document.write(solution3());
+
+    document.write(solution3([[0,0,0,0,0],
+                              [0,0,1,0,3],
+                              [0,2,5,0,1],
+                              [4,2,4,4,2],
+                              [3,5,1,3,1]],[1,5,3,5,1,2,1,4]));
 </script>
 </body>
 </html>
