--- a/week2/guedong.html
+++ b/week2/guedong.html
@@ -35,7 +35,7 @@
                 for (let i in newD){
                     budget = budget - newD[i]; //8,6,3,-1,-6
                     if(budget < 0){ // 최소값 순으로 빼면서 음수 나오면 스탑
-                        result = i; // result로 정의하면 i 갯수 (0 제외) 나온다.
+                        result = i; // 선언하면 i 갯수 (0 제외) 나온다.
                         break;
                     }
                 }
