--- a/week3/guedong.html
+++ b/week3/guedong.html
@@ -11,58 +11,83 @@
 <body>
 1. 조이스틱 lv.2<br>
 <script>
-    const solution = (string , num) => {
-        const result = string.sort((a, b) => 
-            +([...a][num] > [...b][num]) ||
-            -([...a][num] < [...b][num]) ||
-            +([...a][num + 1] > [...b][num + 1]) ||
-            -([...a][num + 1] < [...b][num + 1])
-        )
-            //1번 통과 return [...a][num].localeCompare([...b][num]);
-        return result;
+    const solution = name => {
+        let answer = 0;
+        const process1 = name.length - 1;
+        const z = 'Z'.charCodeAt(0);
+        const a = 'A'.charCodeAt(0);
+        for(let i in name){
+            const cur = name[i].charCodeAt(0);
+            answer += (z - cur + 1) > cur - a ? cur - a : (z - cur + 1);
+            if(cur === a){
+                const nextIdx = i+1;
+                let countA = 0;
+                while (nextIdx < name.length &&
+                    name.charAt(nextIdx) == 'A'){
+                    countA++;
+                    nextIdx++;
+                }
+                const temp = ( name.charAt(0)=='A'? 0 : (i-1)*2 )+(name.length-(1+i+countA));
+                if(process1 > temp) {
+                    process1 = temp;
+                }
+            }
+        }
+        answer += process1;
+        return answer;
     }
-    document.write(solution(['abce','abcd','cdx'], 2));
+    document.write(solution('JEROEN'));
 </script>
 <hr>
 2. 가장 큰 수 lv.2<br>
 <script>
-    const solution2 = (d , budget) => {
-        const newD = d.sort();
-            if(newD.reduce((a, c) => a + c) === budget){
-                return newD.length;
-            } else if (newD.reduce((a, c) => a + c) > budget){
-                for (let i in newD){
-                    budget = budget - newD[i]; //8,6,3,-1,-6
-                    if(budget < 0){ // 최소값 순으로 빼면서 음수 나오면 스탑
-                        result = i; // 선언하면 i 갯수 (0 제외) 나온다.
-                        break;
-                    }
-                }
-                return result;
-            }          
+    const solution2 = (numbers) => {
+       const strNum = numbers.map(v => JSON.stringify(v));
+       const process1 = strNum.sort((a, b)=>
+           // +([...a][0] < [...b][0]) ||
+           // -([...a][0] > [...b][0]) 1번 통과
+           (b + a) - (a + b)
+       )
+       return process1.join('');
     }
-    document.write(solution2([1,3,2,4],10));
+    document.write(solution2([3, 30, 34, 5, 9]));
 </script>
 <hr>
 3. 베스트앨범 lv.3<br>
 <script>
-    const solution3 = (board, moves) => {
-        let result = [];
-        for(let j in moves){ 
-            for(let i in board){
-                if(board[i][moves[j] - 1] > 0){
-                    result.push(i);
-                }
+    const solution3 = (genres, plays) => {
+        let answer = [];
+        const list = genres.reduce((hash, g, i) => {
+            if (!hash[g]) {
+                hash[g] = {plays: plays[i], music: []};
+            } else {
+                hash[g].plays += plays[i];
             }
+            hash[g].music.push([i, plays[i]]);
+            return hash;
+        }, {});
+        const sorted = Object.values(list).sort((l, r) => r.plays - l.plays);
+        sorted.forEach((g) => {
+            if (g.music.length > 1) {
+                g.music.sort((l, r) => {
+                    if (l[1] > r[1]) {
+                        return -1;
+                    } else if (l[1] < r[1]) {
+                        return 1;
+                    } else {
+                        return (l[0] > r[0]) ? 1 : -1;
+                    }
+                });
+                answer.push(g.music[0][0]);
+                answer.push(g.music[1][0]);
+            } else {
+                answer.push(g.music[0][0]);
+            }
+            });
+            return answer;
         }
-        return [...new Set(result)].length;
-    }
 
-    document.write(solution3([[0,0,0,0,0],
-                              [0,0,1,0,3],
-                              [0,2,5,0,1],
-                              [4,2,4,4,2],
-                              [3,5,1,3,1]],[1,5,3,5,1,2,1,4]));
+    document.write(solution3(['classic','pop','classic','classic','pop'],[500, 600, 150, 800, 2500]));
 </script>
 </body>
 </html>
