--- a/week6/guedong.html
+++ b/week6/guedong.html
@@ -58,7 +58,11 @@
             return false;
         }
     }
-
+    var str = 'For more information, see Chapter 3.4.5.1';
+    var re = /see (chapter \d+(\.\d)*)/i;
+    var found = str.match(re);
+    
+    console.log(found);
      // return s.match(/p/ig).length == s.match(/y/ig).length; 다른 분의 풀이..
 
     document.write(solution2('PypYy'));
