--- a/week8/guedong.html
+++ b/week8/guedong.html
@@ -5,8 +5,6 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>개발팀 알고리즘 8주차</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    
-    
 </head>
 <body>
 1. 방의 개수 lv.5<br>
@@ -14,8 +12,27 @@
 const solution = arrows => {
     let answer = 0,
         len = arrows.length, //움직인 횟수 //19
-        pointVisited = {}, 
-        nodeVisited = {},
+        pointVisited = {}, //점을 밟은 좌표 정리
+        /*
+        0: (9) [0, 6, 5, 4, 3, 2, 1, 0, -2]
+        1: (2) [-1, -2]
+        2: [-2]
+        -1: (3) [0, 6, -1]
+        -2: (4) [0, 6, 0, 4]
+        -3: (5) [0, 6, 1, 3, 4]
+        -4: (6) [0, 6, 2, 4, 3, 2]
+        -5: (2) [0, 6]
+        -6: (7) [0, 1, 2, 3, 4, 5, 6]
+        */
+        nodeVisited = {}, // 현 지점에서 움직인 좌표
+        /*
+        0_0: (3) ["-1_0", "0_1", "1_-1"]
+        0_1: (2) ["0_2", "0_0"]
+        ....
+        -6_4: (2) ["-6_3", "-6_5"]
+        -6_5: (2) ["-6_4", "-6_6"]
+        -6_6: (2) ["-6_5", "-5_6"]
+        */
         directions = [
             [0, -1], //위 , 0 
             [1, -1], //북동, 1
@@ -29,13 +46,13 @@ const solution = arrows => {
         x = 0,
         y = 0;
 
-    pointVisited[0] = [0];
+    pointVisited[0] = [0]; //?
 
     for (i = 0; i < len; ++i) { //움직인 횟수 범위 내
         for (j = 0; j < 2; ++j) { //x,y 좌표 내
             direction = directions[arrows[i]]; //방향 x,y 설정
-            xPos = x + direction[0];
-            yPos = y + direction[1];
+            xPos = x + direction[0]; //0,1,2,-1,-2,-3,-4,-5,-6
+            yPos = y + direction[1]; //0,1,2,3,4,5,6,-1,-2
 
             node1 = [x, y].join("_"); // x,y값 모두 출력
             node2 = [xPos, yPos].join("_"); //x,y 좌표 모두 출력
@@ -47,26 +64,26 @@ const solution = arrows => {
                 }
             }
 
-            if (!pointVisited[xPos]) {
+            if (!pointVisited[xPos]) {//없으면 빈 배열로 전환
                 pointVisited[xPos] = [];
             }
 
-            pointVisited[xPos].push(yPos); //키 값에는 x 좌표, 나머지는 y좌표
-            if (!nodeVisited[node1]) {
+            pointVisited[xPos].push(yPos);
+            if (!nodeVisited[node1]) { //없으면 빈 배열로 전환
                 nodeVisited[node1] = [];
             }
 
-            if (!nodeVisited[node2]) {
+            if (!nodeVisited[node2]) { //없으면 빈 배열로 전환
                 nodeVisited[node2] = [];
             }
 
             nodeVisited[node1].push(node2);
             nodeVisited[node2].push(node1);
-            console.log(nodeVisited);
             x = xPos;
             y = yPos;            
         };
     };
+    console.log(nodeVisited);
     return answer;
 };
 document.write(solution([6, 6, 6, 4, 4, 4, 2, 2, 2, 0, 0, 0, 1, 6, 5, 5, 3, 6, 0]));
